# Celosia

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  typos.toml
benches/: bench.rs
celosia/: Cargo.toml
celosia/benches/: bench.rs
celosia/src/: lib.rs  utils.rs
celosia/src/en/: constant.rs  mod.rs  number.rs  phonemizer.rs  tagger.rs  tokenizer.rs
celosia/src/g2p/: constant.rs  mod.rs  model.rs  wrapper.rs
celosia/tests/: test_en_numbers.rs  test_en_words.rs
examples/demo-en/: Cargo.toml  README.md
examples/demo-en/src/: main.rs
pack/: Cargo.toml  README.md
pack/src/: en.rs  g2p.rs  main.rs
src/: lib.rs
src/en/: constant.rs  constants.rs  data.rs  mod.rs  model.rs  number.rs  phonemizer.rs  rnn.rs  tagger.rs  tokenizer.rs
src/en/data/: homo.en.json
src/g2p/: constant.rs  mod.rs  model.rs  serde.rs  wrapper.rs
tests/: test_en_numbers.rs  test_en_words.rs
train/: .gitignore  README.md  dict_process.py  eval.py  export.py  infer.py  model.py  preprocess.py  requirements.txt  train.py
train/config/: de.yaml  en.yaml  fr.yaml
