[package]
name = "anthelia"
version = "0.1.0"
edition = "2021"
authors = ["Patchethium"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde-pickle" = "1.1"
serde = "1.0"
anyhow = "1.0.75"
ordered-float = "4.1.1"
regex = "1.10"
rayon = "1.10.0"
rand = "0.8.5"
bimap = "0.6.3"
half = "2.4.1"

[dev-dependencies]
ndarray-rand = "0.14.0"
criterion = { version = "0.5.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[lib]
path = "src/lib.rs"

[profile.release]
strip = true
opt-level = "z"
panic = "abort"
codegen-units = 1