[package]
name = "celosia"
version = "0.1.0"
edition = "2021"
authors = ["Patchethium"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde-pickle" = "1.1"
serde = "1.0"
anyhow = "1.0.75"
ordered-float = "4.1.1"
regex = "1.10"
rayon = "1.10.0"
rand = "0.8.5"
bimap = "0.6.3"
lru = "0.12.3"
ndarray = { "version" = "0.15.0", "features" = ["rayon", "matrixmultiply-threading"] }
itertools = "0.13.0"
ndarray-npy = "0.8.1"
serde_json = "1.0.125"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
opt-level = "z"
panic = "abort"
codegen-units = 1
