[package]
name = "celosia"
version = "0.1.0"
edition = "2021"
authors = ["Patchethium"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde-pickle" = "1.1"
serde = {version="1.0", features = ["derive"]}
anyhow = "1.0.75"
ordered-float = "4.1.1"
regex = "1.10"
bimap = "0.6.3"
lru = "0.12.3"
ndarray = { "version" = "0.16.1", "features" = ["rayon", "matrixmultiply-threading", "serde"] }
itertools = "0.13.0"
bitcode = {version="0.6.3", features = ["serde"]}
zstd = "0.13.2"

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
